--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "prettier": "^2.8.4"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.8.4"
   }
 }
